# SandSight

./: Dockerfile.sandbox  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/yara_rules/: malware_rules.yar  shellcode.yar
sandsight/: main.py
sandsight/core/: engine.py  intelligence.py  plugin_manager.py  reporter.py
sandsight/modules/dynamic/: memory.py  monitor.py  sandbox.py
sandsight/modules/static/: android_parser.py  base.py  ios_parser.py  macho_parser.py  pe_parser.py  yara_scanner.py
sandsight/plugins/: base.py
sandsight/plugins/user/: example_plugin.py
sandsight/templates/: report.html
tests/: test_core.py
